[package]
name = "ttn-relay"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.13"
clap = { version = "3.1.18", features = ["derive"] }
drogue-ttn = { git = "https://github.com/dbrgn/drogue-ttn", branch = "main" }
env_logger = "0.9"
log = "0.4"
paho-mqtt = "0.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5"
ureq = { version = "2.4", features = ["json"] }
