[package]
name = "ttn-relay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
drogue-ttn = "0.6.0"
env_logger = "0.10"
log = "0.4"
paho-mqtt = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
ureq = { version = "2.4", features = ["json"] }
